[package]
name = "mapgen"
version = "0.0.1"
authors = ["Michael Chesser"]

[dependencies.bitmap]
git = "https://github.com/quvarxa/bitmap.git"

[dependencies.noise]
git = "https://github.com/bjz/noise-rs"

[dependencies.interpolate]
git = "https://github.com/quvarxa/interpolate.git"

[dependencies.basic2d]
git = "https://github.com/quvarxa/basic2d.git"

[dependencies]
rand = "*"
num = "*"
