[package]
name = "mapgen"
version = "0.0.1"
authors = ["Michael Chesser"]
edition = "2021"

[dependencies]
bitmap = { git = "https://github.com/mchesser/bitmap.git" }
interpolate = { git = "https://github.com/mchesser/interpolate.git" }
basic2d = { git = "https://github.com/mchesser/basic2d.git" }
noise = { version = "0.7.0", default-features = false }
num-traits = "0.2.15"
